# 2025-shad-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  run-clang-format.py  run_linter.sh  submit.sh
bad-hash/: CMakeLists.txt  readme.md  run.cpp
bad-rand/: CMakeLists.txt  readme.md  run.cpp
bin-pow/: CMakeLists.txt  binpow.h  readme.md  test.cpp
cipher/: CMakeLists.txt  decipher.h  readme.md  test.cpp
cmake/: TestSolution.cmake
coredump/: readme.md
cow-vector/: CMakeLists.txt  cow_vector.h  readme.md  test.cpp
deque/: CMakeLists.txt  deque.h  readme.md  test.cpp  test_memory.cpp
docs/: crash_readme.md  scheme.md  setup.md
dungeon/: dungeon.h  readme.md  rogue.h  test.cpp
entrance/: CMakeLists.txt  entrance.h  readme.md  student.h  test.cpp  university.h
find-last/: find_last.h  readme.md  test.cpp
flaky/: readme.md
fold/: fold.h  readme.md  test.cpp
functors/: functors.h  readme.md  test.cpp
gcd/: gcd.cpp  input.txt  readme.md
gdb-nosym/: readme.md
gdb-sym/: Dockerfile  readme.md
intrusive-list/: intrusive_list.h  readme.md  test.cpp
itertools/: itertools.h  readme.md  test.cpp
lfu-cache/: CMakeLists.txt  lfu_cache.h  readme.md  test.cpp
list/: list.h  readme.md  test.cpp
local-max/: CMakeLists.txt  local_max.h  readme.md  test.cpp
long-sum/: CMakeLists.txt  long_sum.h  readme.md  test.cpp
matrix/: matrix.h  readme.md  test.cpp
multiplication/: multiplication.h  readme.md  test.cpp
noexcept/: input.txt  main.cpp  readme.md
partition/: partition.h  readme.md  test.cpp
pt-triangle/: CMakeLists.txt  point_triangle.h  readme.md  test.cpp
quadratic/: quadratic.h  test.cpp
range-map/: CMakeLists.txt  range_map.h  readme.md  test.cpp
raytracer/: CMakeLists.txt  floating_image.h  raytracer.h  readme.md  test_asan.cpp  test_release.cpp
raytracer-b2/: CMakeLists.txt  readme.md  test_asan.cpp  test_release.cpp
raytracer-debug/: CMakeLists.txt  readme.md  stub.txt  test_asan.cpp  test_release.cpp
raytracer-geom/: CMakeLists.txt  common.h  geometry.h  intersection.h  ray.h  readme.md  sphere.h  test.cpp  triangle.h  vector.h
raytracer-reader/: CMakeLists.txt  material.h  object.h  read.h  readme.md  scene.h  test.cpp
raytracer/options/: camera_options.h
raytracer/tests/: commons.h
reallol/: input.txt  main.cpp  readme.md
ring-buffer/: readme.md  ring_buffer.h  test.cpp
rle/: CMakeLists.txt  readme.md  rle.h  test.cpp
rotate/: readme.md  rotate.h  test.cpp
rule-of-5/: input.txt  main.cpp  readme.md
safe-transform/: readme.md  test.cpp  transform.h
scheme/: object.h  parser.cpp  tokenizer.h
scheme-tokenizer/: stub.txt  test.cpp
smart-ptr/: readme.md  smart_ptr.h  test.cpp
sms-decoder/: CMakeLists.txt  readme.md  sms_decoder.h  test.cpp
split/: CMakeLists.txt  readme.md  split.h  test.cpp
stack/: stack.h  test.cpp
static-map/: readme.md  static_map.h  test.cpp
steal-password/: CMakeLists.txt  main.cpp  rate_limit.cpp  readme.md  steal.cpp  steal.h  verify.cpp  verify.h
subsequence/: CMakeLists.txt  readme.md  subsequence.h  test.cpp
tryhard/: readme.md  test.cpp  try.h
unique-ptr/: CMakeLists.txt  readme.md  test.cpp  unique_ptr.h
vector/: readme.md  test.cpp  vector.h
